fixed horisontal alignment

--- a/style/modules/_contact.scss
+++ b/style/modules/_contact.scss
@@ -1,6 +1,5 @@
 #contact{
 
-    
-
-
+    width: 100vw;
+    padding-top: 30vh;
 }
