--- a/style/modules/_greeting.scss
+++ b/style/modules/_greeting.scss
@@ -180,7 +180,7 @@
 */
 
 #greeting{
-    width: 100vw;
+    width: 90vw;
     float: left;
 
     //padding-top: 100px;
