--- a/style/modules/_index.scss
+++ b/style/modules/_index.scss
@@ -5,8 +5,8 @@
 }
 
 html{
-    font-size: 16px;
     font-size: 1vw;
+    font-size: 16px;
 
     scroll-behavior: smooth;
     transform: translateZ(0);
@@ -93,6 +93,15 @@ ul{
     white-space: nowrap;
     overflow-x: scroll;
     overflow-y: hidden;
+
+    height: 90vh;
+    width: auto;
+    white-space: nowrap;
+    position: relative;
+
+    overflow-x: scroll;
+    overflow-y: hidden;
+    -webkit-overflow-scrolling: touch;
 }
 
 section{
@@ -103,6 +112,8 @@ section{
     display: inline-block;
     white-space: nowrap;
     padding: 40px; 
+    vertical-align: text-top;
+    vertical-align: middle;
 }
 
 #header{
